--- a/root/.eslintignore
+++ b/root/.eslintignore
@@ -1,1 +1,15 @@
-# ignore these files:
+# Operating system cruft
+.DS_Store
+
+# Development files
+*.orig
+/*.log
+
+# Dependencies
+/node_modules
+
+# Build products
+/dist
+/ssl
+
+.babelrc
