--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "grunt-init-react",
   "version": "0.1.9",
   "description": "grunt-init template for a very basic react project.",
-  "homepage": "https://github.com/skratchdot/grunt-init-react/",
+  "homepage": "https://github.com/mark-smithtb/grunt-init-react-webpack",
   "author": {
-    "name": "skratchdot",
-    "url": "https://www.skratchdot.com/"
+    "name": "mark-smithtb"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/skratchdot/grunt-init-react.git"
+    "url": "git://github.com/mark-smithtb/grunt-init-react-webpack.git"
   },
   "bugs": {
-    "url": "https://github.com/skratchdot/grunt-init-react/issues"
+    "url": "https://github.com/mark-smithtb/grunt-init-react-webpack/issues"
   },
   "main": "template.js",
   "engines": {
