--- a/example/.babelrc
+++ b/example/.babelrc
@@ -1,20 +1,8 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["react-hot-loader/babel", "babel-root-import"],
+  "presets": ["react", "stage-1"],
   "env": {
-    // this plugin will be included only in development mode
     "development": {
-      "plugins": [
-        // must be an array with options object as second item
-        ["react-transform", {
-          // must be an array of objects
-          "transforms": [{
-            "transform": "react-transform-hmr",
-            "imports": ["react"],
-            "locals": ["module"]
-          }]
-        }]
-      ]
+      "plugins": ["transform-react-jsx-source"]
     }
   }
 }
