--- a/example/package.json
+++ b/example/package.json
@@ -1,116 +1,58 @@
 {
-  "name": "grunt-init-react",
-  "description": "grunt-init template for a very basic react project.",
-  "version": "0.1.9",
-  "homepage": "https://github.com/skratchdot/grunt-init-react/",
-  "author": {
-    "name": "skratchdot",
-    "url": "https://www.skratchdot.com/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/skratchdot/grunt-init-react.git"
-  },
-  "bugs": {
-    "url": "https://github.com/skratchdot/grunt-init-react/issues"
-  },
-  "engines": {
-    "node": ">= 4.x.0"
-  },
-  "scripts": {
-    "build": "npm-run-all clean build:dev build:prod",
-    "build:dev": "cross-env NODE_ENV=development webpack",
-    "build:prod": "cross-env NODE_ENV=production webpack",
-    "clean": "rimraf build/dev/* build/prod/* .nyc_output/* coverage/*",
-    "cover": "cross-env NODE_ENV=test nyc npm test",
-    "coveralls": "cat coverage/lcov.info | coveralls --verbose",
-    "lint": "eslint src test webpack.config.js",
-    "test": "cross-env NODE_ENV=test mocha -r babel-register --recursive test",
-    "start": "cross-env NODE_ENV=development webpack-dev-server",
-    "watch": "npm-run-all clean --parallel watch:test watch:lint start",
-    "watch:lint": "watch 'npm run lint' .",
-    "watch:test": "npm run test -- -w"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.16.3",
-    "babel-root-import": "^4.1.3",
-    "brfs": "^1.4.3",
-    "chai": "^3.5.0",
-    "copy-webpack-plugin": "^3.0.1",
-    "coveralls": "^2.11.14",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.25.0",
-    "enzyme": "^2.5.1",
-    "eslint": "^3.8.1",
-    "eslint-plugin-react": "^6.4.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
-    "history": "^4.3.0",
-    "html-loader": "^0.4.4",
-    "immutable": "^3.8.1",
-    "jsdom": "^9.8.0",
-    "json-loader": "^0.5.4",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "markdown-loader": "^0.1.7",
-    "material-ui": "^0.16.1",
-    "mocha": "^3.1.2",
-    "mockery": "^2.0.0",
-    "npm-run-all": "^3.1.1",
-    "nyc": "^8.3.2",
-    "object-path-get": "1.0.0",
-    "object-path-set": "1.0.0",
-    "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-layout-components": "^3.0.3",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "react-router-redux": "^4.0.6",
-    "react-tap-event-plugin": "^1.0.0",
-    "react-transform-hmr": "^1.0.4",
-    "redux": "^3.6.0",
-    "redux-batched-subscribe": "^0.1.6",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-filter-actions": "^1.2.0",
-    "redux-devtools-log-monitor": "^1.1.0",
-    "redux-mock-store": "1.2.1",
-    "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.4",
-    "rimraf": "^2.5.4",
-    "style-loader": "^0.13.1",
-    "testdouble": "^1.8.0",
-    "transform-loader": "^0.2.3",
-    "url-loader": "^0.5.7",
-    "watch": "^1.0.1",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.8",
-    "webpack-sources": "^0.1.2"
-  },
+  "name": "",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
   "license": "MIT",
+  "repository": "",
+  "bugs": "",
+  "homepage": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-serve ./webpack.config.js",
+    "build": "webpack --optimize-minimize --progress -p",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.2.0",
+    "react-jss": "^8.4.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.8.2",
+    "superagent-auth-bearer": "0.0.1",
+    "keymirror": "^0.1.1"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.1.0",
+    "imports-loader": "^0.8.0",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.3",
+    "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-serve": "^0.2.0"
+  },
   "nyc": {
     "all": true,
-    "include": [
-      "src/*"
-    ],
-    "require": [
-      "babel-register"
-    ],
-    "reporter": [
-      "text-summary",
-      "html",
-      "lcovonly"
-    ]
+    "include": ["src/*"],
+    "require": ["babel-register"],
+    "reporter": ["text-summary", "html", "lcovonly"]
   }
 }
